[gd_scene load_steps=48 format=3 uid="uid://m67sbso0h0l5"]

[ext_resource type="Script" path="res://Code/Surfaces/hq.gd" id="1_jmvks"]
[ext_resource type="Texture2D" uid="uid://cx83tq4mfweug" path="res://Sprites/Backgrounds/CosmOilHQ.png" id="2_e1oer"]
[ext_resource type="Texture2D" uid="uid://t7yr8cdcvddk" path="res://Sprites/Player Ships/beaterShip.png" id="3_uc23v"]
[ext_resource type="Texture2D" uid="uid://bj3l7n0sfgibr" path="res://Sprites/Player Ships/basicShip.png" id="4_fy5i5"]
[ext_resource type="Texture2D" uid="uid://d3l1tse6xs64u" path="res://Sprites/Player Ships/transportShip.png" id="5_o72ek"]
[ext_resource type="Texture2D" uid="uid://cokouawxpy1v2" path="res://Sprites/Player Ships/interstellarCosmOilTransporter.png" id="6_bifxr"]
[ext_resource type="Texture2D" uid="uid://djnpkxbnrsan" path="res://Sprites/Player Ships/blackHawkShip.png" id="7_i8qhn"]
[ext_resource type="Texture2D" uid="uid://cm3kdkd0nolam" path="res://Sprites/Player Ships/artemisShip.png" id="8_if7hg"]
[ext_resource type="Texture2D" uid="uid://dxrvaflbdf4gi" path="res://Sprites/Humanoids/upgradePad.png" id="9_ph042"]
[ext_resource type="Texture2D" uid="uid://dahgsfe3xbefc" path="res://Sprites/Humanoids/gasPump.png" id="10_s00e2"]
[ext_resource type="Texture2D" uid="uid://bplkjt5yk6ci2" path="res://Sprites/Humanoids/GeorgeBush.png" id="11_fe6hk"]
[ext_resource type="Texture2D" uid="uid://cj636pi4ij81c" path="res://Sprites/Humanoids/SpaceMarine.png" id="12_gyv04"]
[ext_resource type="Texture2D" uid="uid://bkl4pt4djqskh" path="res://Laser.png" id="13_8542l"]
[ext_resource type="PackedScene" uid="uid://cv72hw2qtd2cu" path="res://Scenes/player.tscn" id="14_w1g08"]
[ext_resource type="PackedScene" uid="uid://bpg452rfn7yr5" path="res://Scenes/hud.tscn" id="15_y6vmo"]
[ext_resource type="PackedScene" uid="uid://cpb4fofhmv6le" path="res://Scenes/music.tscn" id="16_30t7p"]
[ext_resource type="AudioStream" uid="uid://dypksi6uegflc" path="res://Sounds/Refuel.wav" id="17_55gvp"]
[ext_resource type="Theme" uid="uid://cp6je6ot62dfc" path="res://Fonts/GALACTIC VANGUARDIAN.tres" id="17_fwq7r"]
[ext_resource type="AudioStream" uid="uid://dvxs1ffmott27" path="res://Sounds/Select.wav" id="18_km1vi"]
[ext_resource type="AudioStream" uid="uid://dfqm2v5xp0ddx" path="res://Sounds/Engine.wav" id="19_udj4s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p7l5b"]
atlas = ExtResource("3_uc23v")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_18svn"]
atlas = ExtResource("3_uc23v")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8sfq"]
atlas = ExtResource("4_fy5i5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_788am"]
atlas = ExtResource("4_fy5i5")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ri3ub"]
atlas = ExtResource("5_o72ek")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pt21x"]
atlas = ExtResource("5_o72ek")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2o1bn"]
atlas = ExtResource("6_bifxr")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cch32"]
atlas = ExtResource("6_bifxr")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cjlf"]
atlas = ExtResource("7_i8qhn")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_26nab"]
atlas = ExtResource("7_i8qhn")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2181x"]
atlas = ExtResource("8_if7hg")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_an1yn"]
atlas = ExtResource("8_if7hg")
region = Rect2(64, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gkwbh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7l5b")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_18svn")
}],
"loop": true,
"name": &"1F",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8sfq")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_788am")
}],
"loop": true,
"name": &"2F",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ri3ub")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pt21x")
}],
"loop": true,
"name": &"3F",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2o1bn")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cch32")
}],
"loop": true,
"name": &"4F",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cjlf")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_26nab")
}],
"loop": true,
"name": &"5F",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2181x")
}],
"loop": true,
"name": &"6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_an1yn")
}],
"loop": true,
"name": &"6F",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_esshn"]
radius = 158.269

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i6ubq"]
size = Vector2(99.9999, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ol1ro"]
size = Vector2(40, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3e6bn"]
size = Vector2(85, 40)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_36s03"]
radius = 20.0
height = 48.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g4pkp"]
size = Vector2(30, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdycr"]
atlas = ExtResource("12_gyv04")
region = Rect2(130, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1lbu"]
atlas = ExtResource("13_8542l")
region = Rect2(0, 8, 500, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7ns8"]
atlas = ExtResource("12_gyv04")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0231"]
atlas = ExtResource("13_8542l")
region = Rect2(0, 9, 500, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_buctk"]
atlas = ExtResource("12_gyv04")
region = Rect2(65, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_je1p4"]
atlas = ExtResource("13_8542l")
region = Rect2(0, 0, 500, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_exmqa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdycr")
}],
"loop": true,
"name": &"charging",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1lbu")
}],
"loop": true,
"name": &"chargingLaser",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7ns8")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0231")
}],
"loop": true,
"name": &"idleLaser",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_buctk")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_je1p4")
}],
"loop": true,
"name": &"shootLaser",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e8ol3"]
radius = 44.0
height = 170.0

[node name="HQ" type="Node2D"]
script = ExtResource("1_jmvks")

[node name="Ground" type="Sprite2D" parent="."]
position = Vector2(576.5, 324)
scale = Vector2(1.97561, 1.97561)
texture = ExtResource("2_e1oer")

[node name="Vehicle" type="Area2D" parent="."]
position = Vector2(472, -51)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Vehicle"]
position = Vector2(-8.74228e-07, 20)
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_gkwbh")
animation = &"4F"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vehicle"]
shape = SubResource("CircleShape2D_esshn")

[node name="GeorgeBushUpgrade" type="Area2D" parent="."]
position = Vector2(37, 563)

[node name="Sprite2D" type="Sprite2D" parent="GeorgeBushUpgrade"]
position = Vector2(22, -471)
scale = Vector2(1.57812, 1.57812)
texture = ExtResource("9_ph042")
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GeorgeBushUpgrade"]
position = Vector2(20.9999, -471)
rotation = 1.5708
shape = SubResource("RectangleShape2D_i6ubq")

[node name="Counter" type="StaticBody2D" parent="."]
position = Vector2(37, 563)

[node name="CounterPlaceholder" type="ColorRect" parent="Counter"]
offset_left = 17.0
offset_top = -27.0
offset_right = 57.0
offset_bottom = 73.0

[node name="CounterPlaceholder2" type="ColorRect" parent="Counter"]
offset_left = -28.0
offset_top = -67.0
offset_right = 57.0
offset_bottom = -27.0

[node name="CounterCollision" type="CollisionShape2D" parent="Counter"]
position = Vector2(37, 23)
shape = SubResource("RectangleShape2D_ol1ro")

[node name="CounterCollision2" type="CollisionShape2D" parent="Counter"]
position = Vector2(14.5, -47)
shape = SubResource("RectangleShape2D_3e6bn")

[node name="Counter" type="Sprite2D" parent="Counter"]

[node name="GasPump" type="Area2D" parent="."]
position = Vector2(207, 97)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GasPump"]
position = Vector2(25, 20)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_36s03")

[node name="Pump" type="StaticBody2D" parent="GasPump"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GasPump/Pump"]
position = Vector2(15, 20)
shape = SubResource("RectangleShape2D_g4pkp")

[node name="Sprite2D" type="Sprite2D" parent="GasPump/Pump"]
position = Vector2(20, 20)
texture = ExtResource("10_s00e2")

[node name="GeorgeBush" type="Area2D" parent="."]
position = Vector2(37, 563)

[node name="George" type="Sprite2D" parent="GeorgeBush"]
texture = ExtResource("11_fe6hk")
region_enabled = true
region_rect = Rect2(0, 0, 27, 64)

[node name="EyeRight" type="AnimatedSprite2D" parent="GeorgeBush/George"]
visible = false
modulate = Color(1, 0, 0, 1)
position = Vector2(691, -5)
scale = Vector2(2.728, 1)
sprite_frames = SubResource("SpriteFrames_exmqa")
animation = &"shootLaser"

[node name="EyeLeft" type="AnimatedSprite2D" parent="GeorgeBush/George"]
visible = false
modulate = Color(1, 0, 0, 1)
position = Vector2(691, 1)
scale = Vector2(2.728, 1)
sprite_frames = SubResource("SpriteFrames_exmqa")
animation = &"shootLaser"

[node name="CollisionShape2D" type="CollisionShape2D" parent="GeorgeBush"]
position = Vector2(57, 18)
shape = SubResource("CapsuleShape2D_e8ol3")

[node name="Player" parent="." instance=ExtResource("14_w1g08")]
position = Vector2(673, 224)
Explosion = null

[node name="Fire" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0.729412, 0, 1)
position = Vector2(925, 215)
scale = Vector2(9, 15)
texture = ExtResource("7_i8qhn")
region_enabled = true
region_rect = Rect2(171, 0, 10, 6)

[node name="Hud" parent="." instance=ExtResource("15_y6vmo")]
visible = false

[node name="Music" parent="." instance=ExtResource("16_30t7p")]

[node name="Text" type="RichTextLabel" parent="."]
anchors_preset = -1
anchor_top = 0.00347233
anchor_right = 0.681818
anchor_bottom = 0.00347233
offset_left = 109.0
offset_top = 584.0
offset_right = 626.0
offset_bottom = 612.0
scale = Vector2(2, 2)
theme = ExtResource("17_fwq7r")
theme_override_font_sizes/normal_font_size = 14
text = "BOUGHT INTERSTELLAR CosmOil TRANSPORTER FOR 450β"
scroll_active = false
autowrap_mode = 0

[node name="TextTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="GasTime" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Refuel" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_55gvp")
volume_db = -15.0
pitch_scale = 0.5

[node name="Speech" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_km1vi")
volume_db = -20.0

[node name="SpeechGood" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_km1vi")
volume_db = -20.0
pitch_scale = 1.1

[node name="Burn" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_udj4s")
volume_db = -25.0
pitch_scale = 0.55

[connection signal="body_entered" from="Vehicle" to="." method="_on_vehicle_body_entered"]
[connection signal="body_entered" from="GeorgeBushUpgrade" to="." method="_on_george_bush_upgrade_body_entered"]
[connection signal="body_exited" from="GeorgeBushUpgrade" to="." method="_on_george_bush_upgrade_body_exited"]
[connection signal="body_entered" from="GasPump" to="." method="_on_gas_pump_body_entered"]
[connection signal="body_entered" from="GeorgeBush" to="." method="_on_george_bush_body_entered"]
[connection signal="body_exited" from="GeorgeBush" to="." method="_on_george_bush_body_exited"]
[connection signal="timeout" from="TextTimer" to="." method="_on_text_timer_timeout"]
[connection signal="timeout" from="GasTime" to="." method="_on_gas_time_timeout"]
